# octopus

./: .clinerules  .gitignore  .pre-commit-config.yaml  404.html  Analyse_study_classification.py  CATB_issue_workflow_mrmr_after_mbos6_octofull.py  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  analyse_fi.py  analyse_fi_new.py  analyse_study.py  analyse_study_classtask.py  basic_classification.py  basic_classification_tabpfn.py  basic_regression.py  check_training_detailed.py  compare_experiments.py  dashboard.py  data_health_check.py  index.html  issue46_workflow_titanic_xgbproblem.py  issue47_test_read_saved_experiments.py  issue47_workflow_titanic_Nils.py  load_data.py  mkdocs.yml  objects.inv  octopus.tar  octopus.yml  octopus_20240830.tar  octopus_autosk_p38.yml  octopus_new.yml  octopus_p310.yml  octopus_p312.yml  predict_ontest_titanic.py  pydoclint.toml  pyproject.toml  ruff.toml  separate_manual_training.py  (+61 more)
.github/workflows/: check-notebooks.yml  docs.yml  main.yml  pr-validation.yml  release.yml  ruff.yml  test-package.yml
changelog/: index.html
concepts/concepts/: index.html
concepts/nested_cv/: index.html
concepts/understanding_results/: index.html
contributing/: index.html
contributors/: index.html
datasets/: AlonDS2000.csv  diabetes.csv  gbs2.csv
docs/: conf.py  faq.md  index.md  known_issues.md  license.md
docs/_static/: custom.css
docs/concepts/: concepts.md  nested_cv.md  understanding_results.md
docs/misc/: contributing_link.md  license_link.md
docs/reference/: manager.md  metrics.md  models.md  modules.md  reference.md  scripts.md  study.md  task.md
docs/scripts/: build_documentation.py  build_examples.py  generate_examples.py  utils.py
docs/templates/: custom-class-template.rst  custom-module-template.rst
docs/userguide/: cli.md  time_to_event.md  userguide.md
examples/: Analyse_study_classification.py  analyse_fi.py  analyse_fi_new.py  analyse_study_classification.ipynb  analyse_study_classification.py  analyse_study_classtask.ipynb  analyse_study_classtask_ag.ipynb  analyse_study_classtask_ag_split0.ipynb  analytics.py  basic_classification.ipynb  basic_classification.py  basic_classification_tabpfn.py  basic_regression.ipynb  basic_regression.py  basic_timetoevent.py  dashboard.py  dashboard_results.py  data_health_check.ipynb  data_health_check.py  ensemble_selection.py  evaluation_classification.ipynb  evaluation_classification.py  evaluation_regression.ipynb  evaluation_regression.py  example_predict_on_newdata.py  example_predict_ontest_housing.py  example_predict_ontest_mbos6.py  issue47_test_read_saved_experiments.py  issue47_workflow_titanic_Nils.py  main.py  multi_sequence.py  multi_workflow.ipynb  multi_workflow.py  sequence_roc_octo.py  test_celloutput_removal.ipynb  use_own_hyperparameters.ipynb  use_own_hyperparameters.py  wf_multiclass_wine.ipynb  wf_multiclass_wine.py  wf_octo_autogluon.ipynb  (+37 more)
examples/analyis_scripts/: analyse_experiment.py  analyse_fi_new.py  analyse_study.py  dashboard_results.py  predict_ontest_MB.py  predict_ontest_mbos6.py  predict_ontest_titanic.py  show_optuna.py
examples/analyse_study_classification/: index.html
examples/basic_classification/: index.html
examples/basic_classification_tabpfn/: index.html
examples/basic_regression/: index.html
examples/basic_timetoevent/: index.html
examples/data_health_check/: index.html
examples/evaluation_classification/: index.html
examples/evaluation_regression/: index.html
examples/multi_workflow/: index.html
examples/old/: analyse_fi.py  analytics_test_aw.py  dashboard.py  ensemble_selection.py  example_predict_ontest_mbos6.py  issue46_workflow_titanic_xgbproblem.py  issue47_test_read_saved_experiments.py  issue47_workflow_titanic_Nils.py  predict_on_newdata.py  predict_ontest_titanic.py  workflow_diabetes_autosk_parallel.py  workflow_diabetes_octofull.py  workflow_housing_octofull_own_hp.py  workflow_martin_1b_autosk_poly_ardreg.py  workflow_martin_1b_autosk_poly_ardreg_nodatapre_nometa.py  workflow_martin_2_octofull_nopoly_ridge.py  workflow_martin_2_octofull_poly_ardreg.py  workflow_martin_2_octofull_poly_ridge.py  workflow_martin_2_octofull_poly_svm_test.py  workflow_mrmr_after_mbos6_octofull.py  workflow_predict_on_new_samples.py  workflow_roc_octo_mrmr_octo_mbos6_octofull.py  workflow_titanic_openml_octofull.py  workflow_titanic_openml_octofull_ensel.py
examples/test-scripts/: workflow_largeregression_octofull_poly_ridge.py  workflow_surivial_octofull_xtratree.py
examples/test_scripts/: analyse_fi_new.py  analyse_study.py  basic_classification_NaN.py  predict_ontest_MB.py  predict_ontest_mbos6.py  predict_ontest_titanic.py  workflow_diabetes_mrmr_octofull.py  workflow_diabetes_octo_mrmr_octo.py  workflow_highdim.py  workflow_highdim_efs.py  workflow_housing_octo.py  workflow_housing_octofull.py  workflow_largeregression_octofull_poly_ridge.py  workflow_largeregression_poly_ridge_octo.py  workflow_mbos6_3steps_sfs.py  workflow_mbos6_4steps_rfe.py  workflow_mbos6_4steps_sfs.py  workflow_mbos6_5step_sequence.py  workflow_mbos6_mrmr.py  workflow_mbos6_octo.py  workflow_mbos6_octo_mrmr_octo.py  workflow_mbos6_roc.py  workflow_mbos6rad_4steps_mb.py  workflow_mbos6rad_4steps_rad.py  workflow_mbos6rad_4steps_rad_mb_clhe.py  workflow_mrmr_after_mbos6_octofull.py  workflow_os12_004_labvalue_quibim_omoro_xgb.py  workflow_os12_mbclhe_5steps_auto.py  workflow_os12_mblarge_omoro_fixed_xgb.py  workflow_os12_mbsmall_auto_octomrmroctorfeocto_xtree.py  workflow_os12_mbsmall_auto_omoro_xgb.py  workflow_os12_mbsmall_auto_oomoro_v2_xgb.py  (+40 more)
faq/: index.html
license/: index.html
octopus/: __init__.py  cli.py  config.py  data.py  data_old.py  datasplit.py  exceptions.py  experiment.py  logger.py  manager.py  ml.py  predict.py  results.py  utils.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_basic_classification.py  test_basic_regression.py  test_config_manager.py  test_config_study.py  test_data.py  test_data_quality_check.py  test_examples.py  test_infrastructure.py  test_predict.py
(+281 files in other folders)
