[project]
name = "octopus"
description = "An Auto-ML framework optimized for small datasets"
authors = [
    {name = "Merck KGaA, Darmstadt, Germany"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python =">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "AutoML",
    "Small data",
    "Machine learning",
    "Explainable AI",
    "Interpretable ML"
]
dynamic = ['version']
dependencies = [
    "altair>=5.5.0",
    "attrs>=25.3.0",
    "catboost>=1.2.8",
    "duckdb>=1.3",
    "lz4>=4.4",
    "marimo>=0.15",
    "miceforest>=6.0",
    "networkx>=3.5",
    "numpy>=2.2",
    "optuna>=4.5",
    "pandas>=2.3,<3",
    "polars>=1.33",
    "rapidfuzz>=3.14",
    "scikit-learn>=1.6.0",
    "shap>=0.48",
    "xgboost>=3.0"
]

[project.urls]
Homepage = "TBD"
Documentation = "TBD"
Changelog = "TBD"
GitHub = "https://github.com/emdgroup/octopus/"
Issues = "https://github.com/emdgroup/octopus/issues/"
# DEV TOOLS NOTE: The versions of all dev tools should be consistent everywhere
# (pre-commit, environment.yml, requirements.txt, pyproject.toml, ...)
# AUDIT NOTE: The marked packages are secondary dependencies but their versions are
# set explicitly because the otherwise installed default versions have been flagged
# for vulnerabilities by pip-audit
[project.optional-dependencies]
boruta = [
    "boruta>=0.4.3",
]
autogluon = [
    "autogluon.tabular[all]>=1.4",
]
survival = [
    "scikit-survival>=0.25"
]
tabpfn = [
    "tabpfn>=2.1"
]
dev = [
    "octopus[autogluon]",
    "octopus[tabpfn]",
    "octopus[boruta]",
    "octopus[survival]",
    "octopus[lint]",
    "octopus[test]",
]
docs = [
]
examples = [
]
lint = [
    "flake8==7.3.0", # see DEV TOOLS NOTE
    "pre-commit==4.3.0", # see DEV TOOLS NOTE
    "pydoclint==0.7.3", # see DEV TOOLS NOTE
    "pyupgrade==3.20.0", # see DEV TOOLS NOTE
    "ruff==0.12.12", # see DEV TOOLS NOTE
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "octopus[autogluon]",
]

[build-system]
requires = [
    "setuptools>=80.9",
    "setuptools_scm[toml]>=9.2"
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = "dirty-tag"
[tool.setuptools]
packages = ["octopus"]
