[project]
name = "octopus"
description = "An Auto-ML framework optimized for small datasets"
authors = [
    {name = "Merck KGaA, Darmstadt, Germany"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python =">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "AutoML",
    "Small data",
    "Machine learning",
    "Explainable AI",
    "Interpretable ML"
]
dynamic = ['version']
dependencies = [
    "altair>=5.5.0",
    "attrs>=25.3.0",
    "catboost>=1.2.8",
    "duckdb>=1.3",
    "lz4>=4.4",
    "marimo>=0.15",
    "networkx>=3.5",
    "numpy>=2.2",
    "optuna>=4.5",
    "pandas>=2.3,<3",
    "polars>=1.33",
    "ray>=2.44",
    "rapidfuzz>=3.14",
    "scikit-learn>=1.6.0",
    "shap>=0.48",
    "xgboost>=3.0",
    "fastparquet>=2024.11.0",
    "fsspec>=2025.10.0",
    "universal_pathlib>=0.3.6",
]

[project.urls]
Homepage = "TBD"
Documentation = "TBD"
Changelog = "TBD"
GitHub = "https://github.com/emdgroup/octopus/"
Issues = "https://github.com/emdgroup/octopus/issues/"
# DEV TOOLS NOTE: The versions of all dev tools should be consistent everywhere
# (pre-commit, environment.yml, requirements.txt, pyproject.toml, ...)
# AUDIT NOTE: The marked packages are secondary dependencies but their versions are
# set explicitly because the otherwise installed default versions have been flagged
# for vulnerabilities by pip-audit
[project.optional-dependencies]
boruta = [
    "boruta>=0.4.3",
]
autogluon = [
    "autogluon.tabular[all]>=1.4",
    "bokeh>=3.8", # missed and required by ag=1.4
    "tokenizers>=0.13.0", # Override old tokenizers, use version with Python 3.12 wheels
]
survival = [
]
# NOTE: The 'survival' extra is intentionally kept as an empty placeholder.
# It is referenced elsewhere (e.g. in test dependencies as `octopus[survival]`)
# and reserved for future survival-analysis backends without breaking that extra name.
tabpfn = [
    "tabpfn>=2.1"
]
dev = [
    "octopus[test]",
    "octopus[mypy]",
    "nbformat>=5.10", # analysis notebook
    "seaborn>=0.13", # analysis notebook
    "ipywidgets>=8", # analysis notebook
]
docs = [
]
examples = [
]
lint = [
    "flake8==7.3.0", # see DEV TOOLS NOTE
    "pre-commit==4.3.0", # see DEV TOOLS NOTE
    "pydoclint==0.7.3", # see DEV TOOLS NOTE
    "pyupgrade==3.21.0", # see DEV TOOLS NOTE
    "ruff==0.14.1", # see DEV TOOLS NOTE
]
mypy = [
    "mypy==1.18.2", # see DEV TOOLS NOTE
    "joblib-stubs>=1.5.2.0.20250831",
    "pandas-stubs>=2.3,<3",
    "plotly-stubs==0.0.6",
    "scikit-learn-stubs>=0.0.3",
    "scipy-stubs>=1.16.3.0",
    "types-networkx>=3.5",
    "types-pytz>=2025.2.0",
    "types-jmespath>=1.0.2"
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "octopus[autogluon]",
    "octopus[tabpfn]",
    "octopus[boruta]",
    "octopus[survival]",
    "octopus[lint]",
    "moto[server,s3]>=5.1.17",
    "s3fs>=2025.10.0",
    "fastparquet>=2024.11.0",
]

[build-system]
requires = [
    "setuptools>=80.9",
    "setuptools_scm[toml]>=9.2"
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = "dirty-tag"
[tool.setuptools]
packages = ["octopus"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["examples", "docs", "tests", "studies"]


[[tool.mypy.overrides]]
module = "mlxtend.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boruta.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "autogluon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tabpfn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lz4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "catboost.*"
ignore_missing_imports = true
